clean_and_stats

--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
    "source": [
     "from src.game.board import Board\n",
     "from src.game.fight import fight\n",
-    "from src.game.contest import contest, contest_bis, contest_bis_bis\n",
+    "from src.game.contest import contest\n",
     "from src.common.constants import * "
    ]
   },
@@ -71,9 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -83,12 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 3.95 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "move = board.flat_mc(n=1000)"
@@ -96,12 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color : 1, column: 3.\n"
+     ]
+    }
+   ],
    "source": [
     "move.render()"
    ]
@@ -117,14 +133,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [03:16<00:00,  1.97s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'flat_mc': 1.0, 'random_move': 0.0, 'tie': 0.0}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "contest(\"flat_mc\", \"random_move\", nb_fights=10, nb_playouts=500)"
+    "contest(\"flat_mc\", \"random_move\", nb_fights=100, nb_playouts=500)"
    ]
   },
   {
@@ -184,44 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [16:10<00:00,  9.70s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'flat_mc': 0.53, 'tie': 0.0, 'ucb': 0.47}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "contest(\"flat_mc\", \"ucb\", nb_fights=100, nb_playouts=500) # Résultat moins cohérent que UCB_bis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Juste pour nous : j'ai testé UCB et UCB_BIS 100 fights 500 playouts, ucb 0.47 et ucb_bis 0.53. J'ai supprimé ucb et laissé ucb_bis à la place"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -230,12 +227,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 16%|████████████▉                                                                    | 32/200 [08:27<33:32, 11.98s/it]"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 200/200 [48:34<00:00, 14.57s/it]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'flat_mc': 0.455, 'tie': 0.0, 'ucb': 0.545}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"flat_mc\", \"ucb\", nb_fights=200, nb_playouts=1000) # Résultat moins cohérent que UCB_bis"
+    "contest(\"flat_mc\", \"ucb\", nb_fights=200, nb_playouts=1000) # 0.455 / 0.545"
    ]
   },
   {
@@ -312,14 +319,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [41:57<00:00, 25.17s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'flat_mc': 0.4, 'tie': 0.0, 'uct_search': 0.6}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "contest(\"flat_mc\", \"uct_search\", nb_fights=100, nb_playouts=500)"
+    "contest(\"flat_mc\", \"uct_search\", nb_fights=100, nb_playouts=500) #0.4 / 0.6"
    ]
   },
   {
@@ -333,43 +358,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 50/50 [04:15<00:00,  5.12s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [59:00<00:00, 35.40s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'tie': 0.0, 'ucb': 0.36, 'uct_search': 0.64}"
+       "{'tie': 0.0, 'ucb': 0.49, 'uct_search': 0.51}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"uct_search\", \"ucb\", nb_fights=50, nb_playouts=100) "
+    "contest(\"uct_search\", \"ucb\", nb_fights=100, nb_playouts=500)  #0.48 / 0.52"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "contest(\"uct_search\", \"ucb\", nb_fights=100, nb_playouts=500)  "
+    "Je l'ai fait deux fois, le coup d'avant c'était 0.52 / 0.48 pour ucb donc bien trop proche il y a un pb avec notre uct : sûrement à cause du hashing, enfin c'est possible en tout cas "
    ]
   },
   {
@@ -390,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -399,97 +419,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 50/50 [01:40<00:00,  2.02s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [3:07:21<00:00, 112.42s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'flat_mc': 0.48, 'rave_search': 0.52, 'tie': 0.0}"
+       "{'flat_mc': 0.56, 'rave_search_bis': 0.44, 'tie': 0.0}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest_bis(\"rave_search\", \"flat_mc\", nb_fights=50, nb_playouts=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 50/50 [19:13<00:00, 23.08s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'flat_mc': 0.32, 'rave_search_bis': 0.68, 'tie': 0.0}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "contest(\"rave_search_bis\", \"flat_mc\", nb_fights=50, nb_playouts=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest(\"rave_search_bis\", \"flat_mc\", nb_fights=100, nb_playouts=500)"
+    "contest(\"rave_search\", \"flat_mc\", nb_fights=100, nb_playouts=500) #0.44/ 0.56"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### RAVE vs UCB_bis"
+    "### RAVE vs UCB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest_bis(\"rave_search\", \"ucb_bis\", nb_fights=100, nb_playouts=10) # Victoire légère RAVE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest_bis(\"rave_search\", \"ucb_bis\", nb_fights=50, nb_playouts=100) # Victoire franche UCB\n",
-    "# A montrer dans les graphs : score du contest RAVE vs UCB selon le nb de playouts autorisés"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -498,33 +455,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 50/50 [13:54<00:00, 16.68s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [3:41:03<00:00, 132.63s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'rave_search_bis': 0.48, 'tie': 0.0, 'ucb': 0.52}"
+       "{'rave_search_bis': 0.33, 'tie': 0.01, 'ucb': 0.66}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"rave_search_bis\", \"ucb\", nb_fights=50, nb_playouts=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest(\"rave_search_bis\", \"ucb\", nb_fights=100, nb_playouts=500)"
+    "contest(\"rave_search\", \"ucb\", nb_fights=100, nb_playouts=500) #0.33/ 0.66"
    ]
   },
   {
@@ -536,29 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest_bis(\"rave_search\", \"uct_search\", nb_fights=100, nb_playouts=10) # Victoire légère RAVE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest_bis(\"rave_search\", \"uct_search\", nb_fights=50, nb_playouts=100) # Victoire légère RAVE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -567,33 +491,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 50/50 [15:14<00:00, 18.30s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [3:59:17<00:00, 143.58s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'rave_search_bis': 0.58, 'tie': 0.0, 'uct_search': 0.42}"
+       "{'rave_search_bis': 0.31, 'tie': 0.0, 'uct_search': 0.69}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"rave_search_bis\", \"uct_search\", nb_fights=50, nb_playouts=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest(\"rave_search_bis\", \"uct_search\", nb_fights=100, nb_playouts=500)"
+    "contest(\"rave_search\", \"uct_search\", nb_fights=100, nb_playouts=500) #0.31/ 0.69"
    ]
   },
   {
@@ -612,24 +525,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [3:37:04<00:00, 130.25s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'flat_mc': 0.67, 'grave_search_bis': 0.31, 'tie': 0.02}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "contest_bis(\"grave_search\", \"flat_mc\", nb_fights=100, nb_playouts=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest(\"grave_search_bis\", \"flat_mc\", nb_fights=100, nb_playouts=500)"
+    "contest(\"grave_search\", \"flat_mc\", nb_fights=100, nb_playouts=500) #0.31 / 0.67"
    ]
   },
   {
@@ -641,36 +561,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [3:08:16<00:00, 112.97s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'grave_search_bis': 0.38, 'tie': 0.0, 'ucb': 0.62}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "contest_bis(\"grave_search\", \"ucb_bis\", nb_fights=100, nb_playouts=10) # Victoire GRAVE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest_bis(\"grave_search\", \"ucb_bis\", nb_fights=50, nb_playouts=100) # Victoire légère UCB\n",
-    "# A montrer dans les graphs : score du contest GRAVE vs UCB selon le nb de playouts autorisés"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest(\"grave_search_bis\", \"ucb\", nb_fights=100, nb_playouts=500)"
+    "contest(\"grave_search\", \"ucb\", nb_fights=100, nb_playouts=500) #0.38/0.62"
    ]
   },
   {
@@ -682,35 +597,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [4:08:30<00:00, 149.10s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'grave_search_bis': 0.34, 'tie': 0.0, 'uct_search': 0.66}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "contest_bis(\"grave_search\", \"uct_search\", nb_fights=100, nb_playouts=10) # Victoire légère UCT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest_bis(\"grave_search\", \"uct_search\", nb_fights=10, nb_playouts=100) # Victoire UCT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest(\"grave_search_bis\", \"uct_search\", nb_fights=100, nb_playouts=500)"
+    "contest(\"grave_search\", \"uct_search\", nb_fights=100, nb_playouts=500)"
    ]
   },
   {
@@ -722,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -731,81 +642,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [00:05<00:00,  4.89it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [7:13:41<00:00, 260.22s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'grave_search': 0.4, 'rave_search': 0.6, 'tie': 0.0}"
+       "{'grave_search_bis': 0.49, 'rave_search_bis': 0.44, 'tie': 0.07}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest_bis_bis(\"grave_search\", \"rave_search\", nb_fights=25, nb_playouts=10) # Victoire RAVE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|██        | 5/25 [00:10<00:38,  1.93s/it]"
-     ]
-    }
-   ],
-   "source": [
-    "contest_bis_bis(\"grave_search\", \"rave_search\", nb_fights=25, nb_playouts=100) # Victoire "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 50/50 [34:34<00:00, 41.50s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'grave_search_bis': 0.54, 'rave_search_bis': 0.42, 'tie': 0.04}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "contest(\"rave_search_bis\", \"grave_search_bis\", nb_fights=50, nb_playouts=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "contest(\"rave_search_bis\", \"grave_search_bis\", nb_fights=100, nb_playouts=500)"
+    "contest(\"rave_search\", \"grave_search\", nb_fights=100, nb_playouts=500)"
    ]
   },
   {
