--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -367,29 +367,52 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [59:00<00:00, 35.40s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [3:27:48<00:00, 124.69s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'tie': 0.0, 'ucb': 0.49, 'uct_search': 0.51}"
+       "{'tie': 0.0, 'ucb': 0.55, 'uct_search': 0.45}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"uct_search\", \"ucb\", nb_fights=100, nb_playouts=500)  #0.48 / 0.52"
+    "contest(\"uct_search\", \"ucb\", nb_fights=100, nb_playouts=1000)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [4:53:55<00:00, 176.36s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'tie': 0.01, 'ucb': 0.54, 'uct_search': 0.45}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Je l'ai fait deux fois, le coup d'avant c'était 0.52 / 0.48 pour ucb donc bien trop proche il y a un pb avec notre uct : sûrement à cause du hashing, enfin c'est possible en tout cas "
+    "# Puissance 5 en 8x8\n",
+    "contest(\"uct_search\", \"ucb\", nb_fights=100, nb_playouts=500) "
    ]
   },
   {
@@ -410,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -419,16 +442,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [3:07:21<00:00, 112.42s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 100/100 [2:00:32<00:00, 72.32s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'flat_mc': 0.56, 'rave_search_bis': 0.44, 'tie': 0.0}"
+       "{'flat_mc': 0.66, 'rave_search': 0.3, 'tie': 0.04}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,6 +681,15 @@
    ],
    "source": [
     "contest(\"rave_search\", \"grave_search\", nb_fights=100, nb_playouts=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "PUISSANCE 5 A TESTER"
    ]
   },
   {
