Explore UCT results

--- a/notebooks/manual_game.ipynb
+++ b/notebooks/manual_game.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -16,9 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from src.game.fight import fight"
@@ -27,27 +23,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "opponent = \"ucb_bis\"\n",
-    "play_first = False"
+    "opponent = \"uct_search\"\n",
+    "play_first = False\n",
+    "nb_playouts = 100"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if play_first:\n",
-    "    fight(\"manual_move\", opponent, nb_playouts=4000)\n",
+    "    fight(\"manual_move\", opponent, nb_playouts=nb_playouts)\n",
     "else:\n",
-    "    fight(opponent, \"manual_move\", nb_playouts=4000)"
+    "    fight(opponent, \"manual_move\", nb_playouts=nb_playouts)"
    ]
   }
  ],
@@ -67,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
