--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -2,23 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, \"C:/Users/marc-/IASD/Monte Carlo/Connect4\")\n",
-    "# sys.path.insert(0, \"/Users/alopez/Connect4\")"
+    "# sys.path.insert(0, \"C:/Users/marc-/IASD/Monte Carlo/Connect4\")\n",
+    "sys.path.insert(0, \"/Users/alopez/Connect4\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from src.game.board import Board\n",
@@ -73,7 +69,6 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -85,7 +80,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -106,7 +100,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -135,7 +128,6 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -220,7 +212,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -248,8 +240,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "heading_collapsed": true
+    "collapsed": true
    },
    "source": [
     "# UCT"
@@ -258,10 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "board = Board()"
@@ -270,10 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -291,10 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -310,87 +292,69 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### UCT vs FlatMC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [41:57<00:00, 25.17s/it]\n"
+      "\n",
+      "  0%|          | 0/10 [00:00<?, ?it/s]\u001b[A\n",
+      " 10%|█         | 1/10 [00:00<00:00,  9.91it/s]\u001b[A\n",
+      " 20%|██        | 2/10 [00:00<00:00,  8.57it/s]\u001b[A\n",
+      " 30%|███       | 3/10 [00:00<00:00,  8.25it/s]\u001b[A\n",
+      " 40%|████      | 4/10 [00:00<00:00,  6.69it/s]\u001b[A\n",
+      " 50%|█████     | 5/10 [00:00<00:00,  7.23it/s]\u001b[A\n",
+      " 60%|██████    | 6/10 [00:00<00:00,  6.97it/s]\u001b[A\n",
+      " 70%|███████   | 7/10 [00:00<00:00,  7.30it/s]\u001b[A\n",
+      " 80%|████████  | 8/10 [00:01<00:00,  6.18it/s]\u001b[A\n",
+      " 90%|█████████ | 9/10 [00:01<00:00,  6.17it/s]\u001b[A\n",
+      "100%|██████████| 10/10 [00:01<00:00,  6.56it/s]\u001b[A\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'flat_mc': 0.4, 'tie': 0.0, 'uct_search': 0.6}"
+       "{'flat_mc': 0.6, 'uct_search': 0.4, 'tie': 0.0}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"flat_mc\", \"uct_search\", nb_fights=100, nb_playouts=500) #0.4 / 0.6"
+    "contest(\"flat_mc\", \"uct_search\", nb_fights=10, nb_playouts=500, verbose=False) #0.4 / 0.6"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### UCT vs UCB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [3:27:48<00:00, 124.69s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'tie': 0.0, 'ucb': 0.55, 'uct_search': 0.45}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "contest(\"uct_search\", \"ucb\", nb_fights=100, nb_playouts=1000)"
+    "contest(\"uct_search\", \"ucb\", nb_fights=50, nb_playouts=1000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -434,9 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -470,9 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -506,9 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -549,9 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -585,9 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -621,9 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -657,9 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -718,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
