Update contest with new UCT stats

--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.game.board import Board\n",
     "from src.game.fight import fight\n",
-    "from src.game.contest import contest\n",
+    "from src.game.contest import contest, contest_transpositionT\n",
     "from src.common.constants import * "
    ]
   },
@@ -164,9 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -176,15 +175,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.07 s, sys: 13.4 ms, total: 1.09 s\n",
+      "Wall time: 1.17 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
-    "move = board.ucb(nb_playouts=1000)"
+    "move = board.ucb(n=1000)"
    ]
   },
   {
@@ -264,13 +271,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1.86 s\n"
+      "CPU times: user 1.33 s, sys: 52 ms, total: 1.39 s\n",
+      "Wall time: 1.39 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "move = board.uct_search(n=1000)"
+    "transpositionTable = {}\n",
+    "move = board.uct_search(1000, transpositionTable)"
    ]
   },
   {
@@ -299,40 +308,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  0%|          | 0/10 [00:00<?, ?it/s]\u001b[A\n",
-      " 10%|█         | 1/10 [00:00<00:00,  9.91it/s]\u001b[A\n",
-      " 20%|██        | 2/10 [00:00<00:00,  8.57it/s]\u001b[A\n",
-      " 30%|███       | 3/10 [00:00<00:00,  8.25it/s]\u001b[A\n",
-      " 40%|████      | 4/10 [00:00<00:00,  6.69it/s]\u001b[A\n",
-      " 50%|█████     | 5/10 [00:00<00:00,  7.23it/s]\u001b[A\n",
-      " 60%|██████    | 6/10 [00:00<00:00,  6.97it/s]\u001b[A\n",
-      " 70%|███████   | 7/10 [00:00<00:00,  7.30it/s]\u001b[A\n",
-      " 80%|████████  | 8/10 [00:01<00:00,  6.18it/s]\u001b[A\n",
-      " 90%|█████████ | 9/10 [00:01<00:00,  6.17it/s]\u001b[A\n",
-      "100%|██████████| 10/10 [00:01<00:00,  6.56it/s]\u001b[A\n"
+      "100%|██████████| 10/10 [01:49<00:00, 10.90s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'flat_mc': 0.6, 'uct_search': 0.4, 'tie': 0.0}"
+       "{'flat_mc': 0.3, 'uct_search': 0.7, 'tie': 0.0}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"flat_mc\", \"uct_search\", nb_fights=10, nb_playouts=500, verbose=False) #0.4 / 0.6"
+    "contest_transpositionT(\"flat_mc\", False, \"uct_search\", True, nb_fights=10, nb_playouts=500, verbose=False) #0.4 / 0.6"
    ]
   },
   {
@@ -344,11 +342,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [04:10<00:00, 25.05s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'uct_search': 0.9, 'ucb': 0.1, 'tie': 0.0}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "contest(\"uct_search\", \"ucb\", nb_fights=50, nb_playouts=1000)"
+    "contest_transpositionT(\"uct_search\",True, \"ucb\", False, nb_fights=10, nb_playouts=500)"
    ]
   },
   {
