--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -3,23 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
-    "# sys.path.insert(0, \"C:/Users/marc-/IASD/Monte Carlo/Connect4\")\n",
+    "sys.path.insert(0, \"C:/Users/marc-/IASD/Monte Carlo/Connect4\")\n",
     "sys.path.insert(0, \"/Users/alopez/Connect4\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from src.game.board import Board\n",
     "from src.game.fight import fight\n",
-    "from src.game.contest import contest, contest_transpositionT\n",
+    "from src.game.contest import contest\n",
     "from src.common.constants import * "
    ]
   },
@@ -69,6 +73,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -80,6 +85,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -100,6 +106,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -128,6 +135,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
+    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -150,7 +158,7 @@
     }
    ],
    "source": [
-    "contest(\"flat_mc\", \"random_move\", nb_fights=100, nb_playouts=500)"
+    "contest(\"flat_mc\", False, \"random_move\", False, nb_fights=100, nb_playouts=500)"
    ]
   },
   {
@@ -166,6 +174,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -177,6 +186,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -219,6 +229,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -241,7 +252,7 @@
     }
    ],
    "source": [
-    "contest(\"flat_mc\", \"ucb\", nb_fights=200, nb_playouts=1000) # 0.455 / 0.545"
+    "contest(\"flat_mc\", False, \"ucb\", False, nb_fights=200, nb_playouts=1000) # 0.455 / 0.545"
    ]
   },
   {
@@ -256,7 +267,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "board = Board()"
@@ -265,7 +278,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -285,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -309,19 +326,21 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [01:49<00:00, 10.90s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [30:50<00:00, 18.51s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'flat_mc': 0.3, 'uct_search': 0.7, 'tie': 0.0}"
+       "{'flat_mc': 0.27, 'tie': 0.0, 'uct_search': 0.73}"
       ]
      },
      "execution_count": 3,
@@ -330,7 +349,7 @@
     }
    ],
    "source": [
-    "contest_transpositionT(\"flat_mc\", False, \"uct_search\", True, nb_fights=10, nb_playouts=500, verbose=False) #0.4 / 0.6"
+    "contest(\"flat_mc\", False, \"uct_search\", True, nb_fights=100, nb_playouts=1000) "
    ]
   },
   {
@@ -342,57 +361,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [04:10<00:00, 25.05s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [30:00<00:00, 18.01s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'uct_search': 0.9, 'ucb': 0.1, 'tie': 0.0}"
+       "{'tie': 0.0, 'ucb': 0.15, 'uct_search': 0.85}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest_transpositionT(\"uct_search\",True, \"ucb\", False, nb_fights=10, nb_playouts=500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [4:53:55<00:00, 176.36s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'tie': 0.01, 'ucb': 0.54, 'uct_search': 0.45}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Puissance 5 en 8x8\n",
-    "contest(\"uct_search\", \"ucb\", nb_fights=100, nb_playouts=500) "
+    "contest(\"uct_search\",True, \"ucb\", False, nb_fights=100, nb_playouts=1000)"
    ]
   },
   {
@@ -414,7 +407,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -448,7 +443,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -482,7 +479,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -523,7 +522,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -557,7 +558,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -591,7 +594,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -625,7 +630,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -684,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
