--- a/notebooks/manual_game.ipynb
+++ b/notebooks/manual_game.ipynb
@@ -3,18 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
-    "#sys.path.insert(0, \"C:/Users/marc-/IASD/Monte Carlo/Connect4\")\n",
+    "sys.path.insert(0, \"C:/Users/marc-/IASD/Monte Carlo/Connect4\")\n",
     "sys.path.insert(0, \"/Users/alopez/Connect4\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from src.game.fight import fight"
@@ -23,10 +27,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "opponent = \"uct_search\"\n",
+    "opponent_table = True\n",
     "play_first = False\n",
     "nb_playouts = 100"
    ]
@@ -34,13 +41,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if play_first:\n",
-    "    fight(\"manual_move\", opponent, nb_playouts=nb_playouts)\n",
+    "    fight(p1=\"manual_move\", p1_table=False, p2=opponent, p2_table=opponent_table, nb_playouts=nb_playouts)\n",
     "else:\n",
-    "    fight(opponent, \"manual_move\", nb_playouts=nb_playouts)"
+    "    fight(p1=opponent, p1_table=opponent_table, p2=\"manual_move\", p2_table=False, nb_playouts=nb_playouts)"
    ]
   }
  ],
@@ -60,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
