rave_adapted_unperformant

--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -415,13 +415,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 100/100 [2:00:32<00:00, 72.32s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [20:50<00:00, 12.51s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'flat_mc': 0.66, 'rave_search': 0.3, 'tie': 0.04}"
+       "{'flat_mc': 0.27, 'rave_search': 0.7, 'tie': 0.03}"
       ]
      },
      "execution_count": 3,
@@ -430,7 +430,7 @@
     }
    ],
    "source": [
-    "contest(\"rave_search\", \"flat_mc\", nb_fights=100, nb_playouts=500) #0.44/ 0.56"
+    "contest(\"rave_search\", True, \"flat_mc\", False, nb_fights=100, nb_playouts=500) #0.7/ 0.27"
    ]
   },
   {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -451,22 +451,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [3:41:03<00:00, 132.63s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [21:26<00:00, 12.87s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'rave_search_bis': 0.33, 'tie': 0.01, 'ucb': 0.66}"
+       "{'rave_search': 0.67, 'tie': 0.03, 'ucb': 0.3}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"rave_search\", \"ucb\", nb_fights=100, nb_playouts=500) #0.33/ 0.66"
+    "contest(\"rave_search\", True, \"ucb\", False, nb_fights=100, nb_playouts=500) #0.33/ 0.66"
    ]
   },
   {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -487,22 +487,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [3:59:17<00:00, 143.58s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [24:04<00:00, 14.45s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'rave_search_bis': 0.31, 'tie': 0.0, 'uct_search': 0.69}"
+       "{'rave_search': 0.36, 'tie': 0.06, 'uct_search': 0.58}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"rave_search\", \"uct_search\", nb_fights=100, nb_playouts=500) #0.31/ 0.69"
+    "contest(\"rave_search\", True, \"uct_search\", True, nb_fights=100, nb_playouts=500) #0.31/ 0.69"
    ]
   },
   {
