--- a/notebooks/manual_game.ipynb
+++ b/notebooks/manual_game.ipynb
@@ -35,7 +35,21 @@
     "opponent = \"uct_search\"\n",
     "opponent_table = True\n",
     "play_first = False\n",
-    "nb_playouts = 100"
+    "nb_playouts = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "if play_first:\n",
+    "    fight(p1=\"manual_move\", p1_table=False, p2=opponent, p2_table=opponent_table, nb_playouts=nb_playouts)\n",
+    "else:\n",
+    "    fight(p1=opponent, p1_table=opponent_table, p2=\"manual_move\", p2_table=False, nb_playouts=nb_playouts)"
    ]
   },
   {
@@ -45,12 +59,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "if play_first:\n",
-    "    fight(p1=\"manual_move\", p1_table=False, p2=opponent, p2_table=opponent_table, nb_playouts=nb_playouts)\n",
-    "else:\n",
-    "    fight(p1=opponent, p1_table=opponent_table, p2=\"manual_move\", p2_table=False, nb_playouts=nb_playouts)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
