--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -415,13 +415,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [20:50<00:00, 12.51s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 100/100 [1:05:51<00:00, 39.52s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'flat_mc': 0.27, 'rave_search': 0.7, 'tie': 0.03}"
+       "{'flat_mc': 0.21, 'rave_search': 0.76, 'tie': 0.03}"
       ]
      },
      "execution_count": 3,
@@ -430,7 +430,7 @@
     }
    ],
    "source": [
-    "contest(\"rave_search\", True, \"flat_mc\", False, nb_fights=100, nb_playouts=500) #0.7/ 0.27"
+    "contest(\"rave_search\", True, \"flat_mc\", False, nb_fights=100, nb_playouts=500) "
    ]
   },
   {
@@ -451,13 +451,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [21:26<00:00, 12.87s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [59:20<00:00, 35.60s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'rave_search': 0.67, 'tie': 0.03, 'ucb': 0.3}"
+       "{'rave_search': 0.62, 'tie': 0.02, 'ucb': 0.36}"
       ]
      },
      "execution_count": 4,
@@ -466,7 +466,7 @@
     }
    ],
    "source": [
-    "contest(\"rave_search\", True, \"ucb\", False, nb_fights=100, nb_playouts=500) #0.33/ 0.66"
+    "contest(\"rave_search\", True, \"ucb\", False, nb_fights=100, nb_playouts=500) "
    ]
   },
   {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -487,16 +487,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [24:04<00:00, 14.45s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 100/100 [1:29:26<00:00, 53.66s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'rave_search': 0.36, 'tie': 0.06, 'uct_search': 0.58}"
+       "{'rave_search': 0.42, 'tie': 0.02, 'uct_search': 0.56}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
